# financial-portfolio-management-system

./: .env  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  app.json  docker-compose-dev.yml  heroku.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt
finance/: .coverage  .env  celery.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
finance/finance/: __init__.py  asgi.py  celery.py  settings.py  urls.py
finance/portfolio/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
finance/portfolio/migrations/: 0001_initial.py  0002_auto_20201112_0213.py  0003_auto_20201112_0220.py  0003_auto_20210128_1901.py  0004_auto_20201112_0221.py  0005_auto_20201113_0208.py  0006_auto_20201115_0456.py  0007_auto_teste.py  0008_auto_teste.py  0009_auto_20201123_2141.py  (+6 more)
portfolio/: admin.py  constants.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  views.py
portfolio/_services/: __init__.py  abstract_service.py  asset.py  portfolio.py  transaction.py
portfolio/migrations/: 0002_manual_20210126_1817.py  0004_auto_20210226_0237.py  0005_auto_20210226_0359.py  0006_auto_20210226_0417.py  0007_auto_20210528_0310.py
portfolio/serializers/: asset.py
portfolio/templatetags/: portfolio_tags.py
portfolio/tests/: factories.py  test_asset_admin.py  test_asset_services.py  test_portfolio_service.py  test_portfolio_services.py  test_selectors.py  test_services.py  test_settings.py  test_stock_fii_transaction_services.py  test_transaction_admin.py  tests.py  utils.py
(+5 files in other folders)
