[tool.poetry]
name = "financial-portfolio-management-system"
version = "0.1.0"
description = "Financial portfolio management system with the objective of consolidating Brazilian stocks, FIIs, Options up to foreign stocks and REITs"
authors = ["Cleiton Silva <cleitonant@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.4"
asgiref = "*"
attrs = "*"
beautifulsoup4 = "*"
certifi = "*"
cffi = "*"
chardet = "*"
constantly = "*"
coverage = "*"
cryptography = "*"
cssselect = "*"
django = "*"
djangorestframework = "*"
hyperlink = "*"
idna = "*"
incremental = "*"
itemadapter = "*"
itemloaders = "*"
jmespath = "*"
lxml = "*"
multitasking = "*"
numpy = "*"
pandas = "*"
parsel = "*"
psycopg2-binary = "*"
pyasn1 = "*"
pyasn1-modules = "*"
pycparser = "*"
python-dateutil = "*"
python-decouple = "*"
pytz = "*"
requests = "*"
six = "*"
soupsieve = "*"
sqlparse = "*"
urllib3 = "*"
w3lib = "*"
webencodings = "*"
"zope.interface" = "*"
Automat = "*"
Protego = "*"
PyDispatcher = "*"
PyHamcrest = "*"
pyOpenSSL = "*"
service_identity = "*"
gunicorn = "*"
whitenoise = "*"
celery = "*"
redis = "*"
ipdb = "*"
faker = "*"
factory-boy = "*"
pytest = "^6.2.3"
pytest-django = "^4.2.0"
pytest-cov = "^2.11.1"
